# Lamagotchi

./: .gitignore  CMakeLists.txt  README.md  \
inc/lamagotchi/: bot_client.h  bot_session.h
inc/lamagotchi/containers/: thread_safe_queue.hpp
inc/lamagotchi/crypting/: blow_fish.h  rsa.h  scramble.hpp  xor.h
inc/lamagotchi/game/entities/: character.h  entity.h  live_entity.h  nonplayer_character.h  object.h  pet.h  user.h
inc/lamagotchi/logic/: logic.hpp
inc/lamagotchi/network/: gameplay_handler.h  login_handler.h  packet_handler.h  tcp_client.h  tcp_connection.h
inc/lamagotchi/network/packets/: packet.hpp
inc/lamagotchi/network/packets/game/: char_info.hpp  char_list.hpp  char_selected.hpp  crypt_init.hpp  ex_info.hpp  manor_list.hpp  move_to_location.hpp  net_ping.hpp  npc_info.hpp  protocol_version.hpp  request_auth.hpp  request_enter_world.hpp  request_manor_list.hpp  request_net_ping.hpp  request_select_char.hpp  status_update.hpp  user_info.hpp
inc/lamagotchi/network/packets/login/: game_guard_auth.hpp  gameguard_auth.hpp  init.hpp  login_fail.hpp  login_ok.hpp  play_fail.hpp  play_ok.hpp  request_gg_auth.hpp  request_login_auth.hpp  request_server_list.hpp  request_server_login.hpp  server_list.hpp
inc/lamagotchi/ui/: main_window.h
inc/lamagotchi/ui/bars/: points_bar.h
inc/lamagotchi/ui/form/: character_stats.h  login_form.h  selected_character.h
inc/lamagotchi/ui/layouts/: flex_grid_layout.h  flow_layout.h
inc/lamagotchi/ui/widgets/: character_info.h  character_stats.h  login_form.h  selected_character.h  selected_enemy.h
src/: CMakeLists.txt  bot_client.cpp  bot_session.cpp  main.cpp
src/crypting/: blow_fish.cpp  rsa.cpp  xor.cpp
src/game/entities/: character.cpp  entity.cpp  live_entity.cpp  nonplayer_character.cpp  object.cpp  pet.cpp  user.cpp
src/network/: gameplay_handler.cpp  login_handler.cpp  packet_handler.cpp  tcp_client.cpp  tcp_connection.cpp
src/ui/: main_window.cpp
src/ui/form/: character_stats.cpp  login_form.cpp  selected_character.cpp
src/ui/layouts/: flex_grid_layout.cpp  flow_layout.cpp
src/ui/widgets/: character_info.cpp  character_stats.cpp  login_form.cpp  selected_character.cpp  selected_enemy.cpp
